landing page and signup page created

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
 }
+h1 {
+  font-family: "Lato", sans-serif;
+}
+
+p {
+  font-family: "Nunito", sans-serif;
+}
 
 .App-logo {
   height: 40vmin;
