--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,20 @@
+.root {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
+}
 .App {
   text-align: center;
+  padding-bottom: 2.5rem;
 }
+html,
+body {
+  height: 100%;
+  position: relative;
+}
+
 h1 {
   font-family: "Lato", sans-serif;
 }
