--- a/client/src/Screens/Signup/Signup.css
+++ b/client/src/Screens/Signup/Signup.css
@@ -3,17 +3,24 @@
   width: 50%;
   margin: 10% auto 0 auto;
   background-color: #e9ecef;
+  box-shadow: 0px 1px 2px 1px #c8cacb;
+  border-radius: 5px;
+  font-family: "Lato", sans-serif;
 }
-
+.su-title {
+  margin-bottom: 5%;
+  border-bottom: 2px solid black;
+  padding-bottom: 15px;
+}
 .un-pw-ctn {
-  width: 90%;
+  width: 100%;
   display: flex;
   margin: 0 auto;
   flex-flow: column nowrap;
 }
 
 .user-info-ctn {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-flow: column nowrap;
