--- a/client/src/Components/Profilecard/Profilecard.css
+++ b/client/src/Components/Profilecard/Profilecard.css
@@ -4,3 +4,8 @@
   box-shadow: 0px 1px 2px 1px #c8cacb;
   border-radius: 5px;
 }
+.profile-pic {
+  width: 40%;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
