--- a/client/src/Components/Shared/Shared.scss
+++ b/client/src/Components/Shared/Shared.scss
@@ -1,3 +1,5 @@
+@import "../../_colors.scss";
+
 .footer-ctn {
   background-color: #e9ecef;
   color: rgb(0, 0, 0);
@@ -51,13 +53,48 @@
 }
 
 /* Header */
+.header-ctn {
+}
 .header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   padding: 25px;
   font-family: "Lato", sans-serif;
+  background-color: $color-dark;
+  &-title {
+    color: $color-primary;
+  }
 }
+.search {
+  width: 33%;
+  position: relative;
+  &__field {
+    font-size: 12px;
+    border-radius: 1rem;
+    width: 90%;
+    padding: 0.3rem;
+    border: none;
+    outline: none;
+    background-color: $color-grey-4;
+    box-shadow: 0 1rem 2rem rgba($color: #000000, $alpha: 0.3);
+    transition: all 0.3s;
+    &:focus {
+      width: 100%;
+    }
+  }
+  &__icon {
+    width: 1.2rem;
+    position: absolute;
+    top: 10px;
+    right: 45px;
+    transition: all 0.2s;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 .home-link {
   text-decoration: none;
   color: black;
@@ -76,5 +113,18 @@
   outline: 0;
 }
 .toggle-drop:hover {
-  background-color: lightblue;
+  background-color: $color-primary;
+}
+
+// Sidebar
+.app-ctn {
+  display: flex;
+  flex: 1;
+}
+.sidebar {
+  &-ctn {
+    flex: 0 0 18%;
+    background-color: $color-grey-dark-1;
+    color: $color-splash;
+  }
 }
